<resources>
    <string name="app_name">INSTEAD</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_update_repo">Update repository</string>
    <string name="action_search">Search</string>
    <string name="action_install_local_game">Install game from Zip</string>

    <string name="repository_activity_title">Add game</string>
    <string name="repository_unable_to_load">Unable to load the game list.\nServer is unavailable or there is no internet connection.</string>
    <string name="repository_try_again">Try again</string>
    <string name="repository_badge_content_description">New version available</string>

    <string name="tv_games_section_installed">Installed</string>
    <string name="tv_games_section_not_installed">Not installed</string>
    <string name="tv_games_empty">No games yet.\nThe repository will be loaded automatically.</string>

    <string name="tv_settings_switch_on">On</string>
    <string name="tv_settings_switch_off">Off</string>

    <string name="tv_controls_hint_title">Controls hint</string>
    <string name="tv_controls_hint_intro">INSTEAD games were made for the computer and are designed for a keyboard and mouse, so controlling them with a remote takes a little getting used to.</string>
    <string name="tv_controls_hint_modes">The game has two control modes, and you can switch between them any time by pressing OK twice (the select button in the middle of the remote\'s D-pad):</string>
    <string name="tv_controls_hint_links_mode">Links mode — the D-pad moves the cursor between links, OK selects the link.</string>
    <string name="tv_controls_hint_cursor_mode">Cursor mode — the D-pad moves the cursor anywhere on the screen, OK clicks there.</string>
    <string name="tv_controls_hint_fallback">If the game does not work in links mode, switch to cursor mode.</string>
    <string name="tv_controls_hint_back_short">A short press of the Back button switches between the main game text and the inventory.</string>
    <string name="tv_controls_hint_back_long">A long press of the Back button exits the game.</string>
    <string name="tv_controls_hint_menu">The INSTEAD menu opens by holding the OK button.</string>
    <string name="tv_controls_hint_got_it">Got it</string>
    <string name="tv_controls_hint_dont_show_again">Don\'t show again</string>

    <string name="game_activity_button_install">Download</string>
    <string name="game_activity_button_uninstall">Delete</string>
    <string name="game_activity_button_update">Update</string>
    <string name="game_activity_button_run">Run</string>
    <string name="game_activity_button_feedback">Write feedback</string>
    <string name="game_activity_button_cancel_download">Cancel</string>
    <string name="game_activity_label_author">Author: %s</string>
    <string name="game_activity_label_version">Version: %s</string>
    <string name="game_activity_label_size">Size: %s</string>
    <string name="game_activity_message_download_pending">Download pending&#8230;</string>
    <string name="game_activity_message_downloading">Downloading: %1$s/%2$s</string>
    <string name="game_activity_message_installing">Downloading&#8230;</string>

    <string name="installed_games_screen_title">INSTEAD</string>
    <string name="installed_games_empty_text">Are you ready for an adventure?\nTap the \"+\" button to install games.</string>
    <string name="installed_games_context_menu_play">Play</string>
    <string name="installed_games_context_menu_play_from_beginning">Restart game</string>
    <string name="installed_games_context_menu_delete">Delete</string>
    <string name="installed_games_context_menu_about">About</string>
    <string name="installed_games_screen_fab_content_description">Install games</string>

    <string name="dialog_delete_game_title">Delete game?</string>
    <string name="dialog_delete_game_text">Saved game data will remain on the device</string>
    <string name="dialog_delete_game_positive_button">Delete</string>
    <string name="dialog_delete_game_negative_button">Cancel</string>

    <string name="dialog_error_close_button">Close</string>

    <string name="custom_dialog_positive_button">Accept</string>
    <string name="custom_dialog_negative_button">Cancel</string>

    <string name="unpack_resources_fragment_try_again_button">Try again</string>
    <string name="unpack_resources_fragment_error_message">Failed to unpack resources. Check the free space on the internal storage and try again.</string>

    <string name="search_placeholder">Find a game</string>
    <string name="search_empty_hint">Enter a query in the field above. You can search by title, author or keywords.</string>
    <string name="search_clear_content_description">Clear search query</string>
    <string name="search_nothing_found">Nothing found. Try different keywords.</string>

    <string name="notification_download_game">Downloading</string>
    <string name="notification_download_games">Downloading: %1$d</string>
    <string name="notification_install_game">Installing</string>
    <string name="notification_games_in_queue">%1$d in queue</string>
    <string name="notification_delete_game">Deleting the game, please wait&#8230;</string>
    <string name="notification_updating_repository">Updating the repository, please wait&#8230;</string>
    <string name="notification_scan_games">Search for local changes in the game directory</string>

    <string name="channel_install_game">Install game</string>
    <string name="channel_delete_game">Delete game</string>
    <string name="channel_crash_report">Send crash report</string>
    <string name="channel_scan_games">Search for local changes in the game directory</string>

    <string name="error">Error</string>
    <string name="error_failed_to_download_file">Failed to download file: %s</string>
    <string name="error_game_file_not_found">Failed to get the game file. The repository may be out of date — update the game list and try again.</string>
    <string name="error_failed_to_unpack_zip">Unable to unpack game. Make sure you have enough free space on your phone and try again.</string>
    <string name="error_failed_to_install_zip">Failed to install game. The archive may be corrupted or unreadable.</string>
    <string name="error_corrupted_zip">The archive is corrupted or not a valid zip file</string>
    <string name="error_not_instead_game_zip">Zip archive does not contain a game</string>
    <string name="error_failed_to_delete_file">Could not delete file from disk</string>
    <string name="error_server_return_unexpected_code">Server returned unexpected code %s</string>
    <string name="error_xml_parse">Error loading game list: %s</string>

    <string name="settings_activity_title">Settings</string>
    <string name="prefs_category_game_settings">Game settings</string>
    <string name="prefs_music_title">Play music</string>
    <string name="prefs_cursor_title">Show cursor</string>
    <string name="prefs_enable_game_theme_title">Built-in game theme</string>
    <string name="prefs_enable_game_theme_summary">Use the theme built into the game, otherwise the default theme below is used</string>
    <string name="prefs_default_theme_title">Default theme</string>
    <string name="prefs_hires_title">High resolution</string>
    <string name="prefs_hires_summary">Use the best screen orientation</string>
    <string name="prefs_text_size_title">Text size</string>
    <string name="slider_value_percent">%1$d%%</string>
    <string name="prefs_keyboard_button_title">Open keyboard button</string>
    <string-array name="prefs_keyboard_button_entries">
        <item>Do not show button</item>
        <item>Bottom left</item>
        <item>Bottom center</item>
        <item>Bottom right</item>
        <item>Left</item>
        <item>Right</item>
        <item>Top left</item>
        <item>Top center</item>
        <item>Top right</item>
    </string-array>
    <string name="prefs_back_button_title">Back button in game</string>
    <string-array name="prefs_back_button_entries">
        <item>Exit the game</item>
        <item>Open menu</item>
    </string-array>
    <string name="prefs_category_repositories">Repositories</string>
    <string name="prefs_repository_title">Main repository</string>
    <string name="prefs_repository_summary">Specify the address of the XML file</string>
    <string name="prefs_sandbox">Sandbox</string>
    <string name="prefs_sandbox_summary">Beta versions of games, unfinished projects, etc.</string>
    <string name="pref_update_repo_background">Update repository in background</string>
    <string name="pref_update_repo_background_summary">Once a day</string>
    <string name="pref_update_repo_when_open">Update repository on startup</string>

    <string name="prefs_category_interface">User interface</string>
    <string name="prefs_category_other">Other</string>
    <string name="prefs_theme">Launcher theme</string>
    <string name="prefs_theme_dialog_title">Select theme</string>
    <string name="prefs_theme_name_light">Light</string>
    <string name="prefs_theme_name_dark">Dark</string>
    <string name="prefs_theme_name_auto_battery">Set by Battery Saver</string>
    <string name="prefs_theme_name_follow_system">Use system default</string>
    <string name="prefs_dynamic_colors">Dynamic colors</string>
    <string name="prefs_dynamic_colors_summary">App colors adapt to your wallpaper</string>
    <string name="prefs_game_controls_hint_title">Controls hint</string>
    <string name="prefs_game_controls_hint_summary">Show control tips before starting a game</string>

    <string name="about_activity_title">About</string>
    <string name="about_activity_about_instead"><b>INSTEAD</b> v%1$s, &#169; Peter Kosyh https://instead-hub.github.io/</string>
    <string name="about_activity_about_instead_launcher"><b>INSTEAD Launcher for Android</b> v%1$s &#169; Boris Timofeev https://github.com/btimofeev/instead-launcher-android/</string>
    <string name="about_activity_thanks">Thanks to:\n- Andrew Lobanov for the game repository http://instead-games.ru\n- Anton Kolosov for the source code of INSTEAD-NG, partially used in this program.\n- the artist NEUD for the beautiful drawings https://vk.com/neudd</string>
    <string name="about_activity_to_game_authors">If you want to create your own game and publish it in the repository, start by reading the documentation http://bit.ly/instead_doc_en</string>
    <string name="about_activity_discuss">You can discuss INSTEAD and games on:\n- Forum https://instead-games.ru/forum/\n- Telegram https://t.me/insteadtalk\n- Discord https://discord.gg/RHquRHm\n- Gitter https://gitter.im/instead-hub/instead\n- Jabber instead@conference.jabber.ru\n- IRC http://oftc.net/ #instead</string>

    <string name="error_crash_title">Crash</string>
    <string name="error_crash_message">Sorry, the application crashed. Please send a report to the developers.</string>
    <string name="error_crash_send_button">Send</string>
    <string name="error_crash_discard_button">Discard</string>
</resources>
