<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".presentation.repository.RepositoryActivity">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/action_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/action_update_repo"
        android:orderInCategory="100"
        android:title="@string/action_update_repo"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_install_local_game"
        android:orderInCategory="200"
        android:title="@string/action_install_local_game"
        app:showAsAction="never"/>
</menu>