<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.game.GameFragment">

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textAppearance="@android:style/TextAppearance.Material.Headline"
            android:textIsSelectable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/lorem"/>

        <ImageView
            android:id="@+id/authorImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name"
            app:srcCompat="@drawable/ic_account_circle_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:text="@string/game_activity_label_author"
            android:textAppearance="@android:style/TextAppearance.Material.Body1"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="@+id/authorImage"
            app:layout_constraintStart_toEndOf="@+id/authorImage"
            app:layout_constraintTop_toTopOf="@+id/authorImage"/>

        <ImageView
            android:id="@+id/versionImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorImage"
            app:srcCompat="@drawable/ic_file_compare_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/game_activity_label_version"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="@+id/versionImage"
            app:layout_constraintStart_toEndOf="@+id/versionImage"
            app:layout_constraintTop_toTopOf="@+id/versionImage"/>

        <ImageView
            android:id="@+id/sizeImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/versionImage"
            app:layout_constraintStart_toEndOf="@+id/version"
            app:layout_constraintTop_toTopOf="@+id/versionImage"
            app:srcCompat="@drawable/ic_math_compass_24dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/game_activity_label_size"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="@+id/sizeImage"
            app:layout_constraintStart_toEndOf="@+id/sizeImage"
            app:layout_constraintTop_toTopOf="@+id/sizeImage"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/deleteButton"
            style="@style/Widget.MaterialComponents.Button"
            android:theme="@style/AppTheme.MaterialButtonOverlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/game_activity_button_uninstall"
            android:visibility="gone"
            app:backgroundTint="@color/colorDeleteButton"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toStartOf="@+id/installButton"
            app:layout_constraintTop_toBottomOf="@+id/versionImage"
            tools:visibility="visible" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/installButton"
            style="@style/Widget.MaterialComponents.Button"
            android:theme="@style/AppTheme.MaterialButtonOverlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/game_activity_button_install"
            android:visibility="gone"
            app:backgroundTint="@color/colorInstallButton"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toStartOf="@+id/runButton"
            app:layout_constraintTop_toBottomOf="@+id/versionImage"
            tools:visibility="visible"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/runButton"
            style="@style/Widget.MaterialComponents.Button"
            android:theme="@style/AppTheme.MaterialButtonOverlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/game_activity_button_run"
            android:visibility="gone"
            app:backgroundTint="@color/colorInstallButton"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/versionImage"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:autoLink="web|email"
            android:linksClickable="true"
            android:text="description"
            android:textIsSelectable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:id="@+id/installMessage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/notification_download_game"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/size" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/installButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
